// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceMembers existing members can edit when current user is manager of the space 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-current-language="en" data-msgid="Members">Members</h3>
      <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" text="Enter a name to add people or groups as members to this Space." title="Add members to this Space"></oc-contextual-helper-stub>
    </div>
    <div class="oc-flex">
      <button aria-label="Filter members" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw open-filter-btn" type="button">
        <!-- @slot Content of the button -->
        <oc-icon-stub fill-type="line" name="search" size="small"></oc-icon-stub>
      </button>
    </div>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="Add members" savebuttonlabel="Add"></invite-collaborator-form-stub>
  <ul aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub modifiable="false" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers filter toggles the filter on click 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-current-language="en" data-msgid="Members">Members</h3>
      <div class="oc-contextual-helper oc-pl-xs">
        <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" id="oc-contextual-helper-1-button" type="button">
          <!-- @slot Content of the button -->
          <oc-icon-stub accessiblelabel="" color="" filltype="line" name="question" size="small" type="span" variation="passive"></oc-icon-stub>
        </button>
        <div class="oc-drop oc-box-shadow-medium oc-rounded oc-width-1-1 oc-info-drop" id="oc-contextual-helper-1">
          <div class="oc-card oc-card-body oc-background-secondary oc-p-m">
            <div class="info-drop-content">
              <div class="oc-flex oc-flex-between info-header oc-border-b oc-pb-s">
                <span class="oc-m-rm info-title">Add members to this Space</span>
                <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw" type="button">
                  <!-- @slot Content of the button -->
                  <oc-icon-stub accessiblelabel="" color="" filltype="line" name="close" size="medium" type="span" variation="inherit"></oc-icon-stub>
                </button>
              </div>
              <p class="info-text">Enter a name to add people or groups as members to this Space.</p>
              <dl class="info-list">
                <dt>What members can do</dt>
                <dd>Members can see who else has access to this space and can access all files in this space. Read or write permissions can be set by the member’s role such as “Viewer” or “Editor”.</dd>
                <dt>What Space managers can do</dt>
                <dd>Members with the Manager role can edit all properties and content of a Space, such as adding or removing members, sharing subfolders with non-members, or creating links to share.</dd>
              </dl>
              <!--v-if-->
              <a class="oc-button oc-rounded oc-button-s oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw info-more-link" href="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" target="_blank">Read more</a>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="oc-flex">
      <div class="oc-flex">
        <div class="oc-text-truncate space-members-filter oc-mr-s">
          <label class="oc-label" for="oc-textinput-2"></label>
          <div class="oc-position-relative">
            <input aria-invalid="false" class="oc-text-input oc-input oc-rounded" id="oc-textinput-2" placeholder="Filter members" type="text">
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
        <button aria-label="Close filter" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw close-filter-btn" type="button">
          <!-- @slot Content of the button -->
          <oc-icon-stub fill-type="line" name="close" size="small"></oc-icon-stub>
        </button>
      </div>
    </div>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="Add members" savebuttonlabel="Add"></invite-collaborator-form-stub>
  <ul aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub modifiable="false" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;

exports[`SpaceMembers invite collaborator form renders the form when the current user is a manager of the space 1`] = `
<div class="oc-position-relative" id="oc-files-sharing-sidebar">
  <div class="oc-flex oc-flex-between oc-flex-center oc-flex-middle">
    <div class="oc-flex oc-py-s">
      <h3 class="oc-text-bold oc-text-medium oc-m-rm" data-current-language="en" data-msgid="Members">Members</h3>
      <oc-contextual-helper-stub class="oc-pl-xs" endtext="" list="[object Object],[object Object],[object Object],[object Object]" readmorelink="https://doc.owncloud.com/webui/next/owncloud_web/web_for_users.html#sharing" text="Enter a name to add people or groups as members to this Space." title="Add members to this Space"></oc-contextual-helper-stub>
    </div>
    <div class="oc-flex">
      <button aria-label="Filter members" class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw open-filter-btn" type="button">
        <!-- @slot Content of the button -->
        <oc-icon-stub fill-type="line" name="search" size="small"></oc-icon-stub>
      </button>
    </div>
  </div>
  <invite-collaborator-form-stub class="oc-my-s" invitelabel="Add members" savebuttonlabel="Add"></invite-collaborator-form-stub>
  <ul aria-label="Space members" class="oc-list oc-list-divider oc-overflow-hidden oc-m-rm" id="files-collaborators-list">
    <li>
      <collaborator-list-item-stub modifiable="false" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
    <li>
      <collaborator-list-item-stub modifiable="true" share="[object Object]"></collaborator-list-item-stub>
    </li>
  </ul>
</div>
`;
